--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,18 @@ commitizen==3.28.0
 decli==0.6.2
 Django==5.0.7
 djangorestframework==3.15.2
+drf-yasg==1.21.7
+inflection==0.5.1
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 prompt-toolkit==3.0.36
+pytz==2024.1
 PyYAML==6.0.1
 questionary==2.0.1
 sqlparse==0.5.1
 termcolor==2.4.0
 tomlkit==0.13.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
 wcwidth==0.2.13
